--- a/BundleAndMinify/BundleAndMinify.csproj
+++ b/BundleAndMinify/BundleAndMinify.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>BundleAndMinify</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>%24/TranstutorsProjects/Development/Source/AskIITians/BundleAndMinify</SccProjectName>
-    <SccLocalPath>.</SccLocalPath>
-    <SccAuxPath>http://10.10.50.13:8080/tfs/transwebtutorsprojects</SccAuxPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
